--- a/applications/editors/josm/plugins/HouseNumberTaggingTool/README
+++ b/applications/editors/josm/plugins/HouseNumberTaggingTool/README
@@ -3,4 +3,5 @@ README for HouseNumberTaggingTool
 
 Simple tool to tag house numbers. Select house and press 'k'. Select your addr-tags and press OK.
 
-author: Oliver Raupach, oliver@raupach.cc
+author: Oliver Raupach, oliver@raupach.cc, http://www.oliver-raupach.de
+        Victor Kropp, http://victor.kropp.name
