--- a/applications/editors/josm/plugins/gpsblam/README
+++ b/applications/editors/josm/plugins/gpsblam/README
@@ -3,7 +3,7 @@ README
 
 This is the GPSBlam Plugin for JOSM. 
 
-For details see http://wiki.openstreetmap.org/wiki/JOSM/Plugins/GPSBlam
+For details see https://wiki.openstreetmap.org/wiki/JOSM/Plugins/GPSBlam
 
 License:
 
