--- a/applications/editors/josm/plugins/tag2link/README
+++ b/applications/editors/josm/plugins/tag2link/README
@@ -8,5 +8,5 @@ Readme for tag2link JOSM plugin
     
 This plugin allows to launch browser to a Web resource about a selected object having known tags, such as Wikipedia.
 
-See http://wiki.openstreetmap.org/wiki/JOSM/Plugins/Tag2Link
+See https://wiki.openstreetmap.org/wiki/JOSM/Plugins/Tag2Link
  
