--- a/applications/editors/josm/plugins/DirectUpload/README
+++ b/applications/editors/josm/plugins/DirectUpload/README
@@ -1,3 +1,3 @@
 Directly uploads GPX from active layer in JOSM to OpenStreetMap Server.
 
-More Details and FAQ's at : http://wiki.openstreetmap.org/index.php/User:Subhodip/GSoC_Doc#DirectUpload_Plugin_in_JOSM_:
+More Details and FAQ's at : https://wiki.openstreetmap.org/index.php/User:Subhodip/GSoC_Doc#DirectUpload_Plugin_in_JOSM_:
