--- a/applications/editors/josm/plugins/epci-fr/README
+++ b/applications/editors/josm/plugins/epci-fr/README
@@ -9,4 +9,4 @@ Readme for epci-fr JOSM plugin
 This plugin helps dealing in editing French EPCIs (boundary=local_authority) 
 by recognizing them at such in the Relations window.
 
-See http://wiki.openstreetmap.org/wiki/WikiProject_France/Tracer_les_limites_administratives/Mise_au_point_du_modele_des_EPCI
+See https://wiki.openstreetmap.org/wiki/WikiProject_France/Tracer_les_limites_administratives/Mise_au_point_du_modele_des_EPCI
