--- a/applications/editors/josm/plugins/opendata/README
+++ b/applications/editors/josm/plugins/opendata/README
@@ -8,7 +8,7 @@ Readme for JOSM Open Data plugin
 
 -------------------------------- DOCUMENTATION --------------------------------
 
-See http://wiki.openstreetmap.org/wiki/JOSM/Plugins/OpenData
+See https://wiki.openstreetmap.org/wiki/JOSM/Plugins/OpenData
 
 ----------------------------------- LICENSE -----------------------------------
 
