--- a/applications/editors/josm/plugins/opendata/modules/fr.datagouvfr/README
+++ b/applications/editors/josm/plugins/opendata/modules/fr.datagouvfr/README
@@ -8,4 +8,4 @@ Readme for Data.gouv.fr module of JOSM Open Data plugin
 
 -------------------------------- DOCUMENTATION --------------------------------
 
-See http://wiki.openstreetmap.org/wiki/JOSM/Plugins/OpenData/Data.gouv.fr
+See https://wiki.openstreetmap.org/wiki/JOSM/Plugins/OpenData/Data.gouv.fr
