--- a/applications/editors/josm/plugins/opendata/modules/fr.toulouse/README
+++ b/applications/editors/josm/plugins/opendata/modules/fr.toulouse/README
@@ -8,5 +8,5 @@ Readme for Toulouse module of JOSM Open Data plugin
 
 -------------------------------- DOCUMENTATION --------------------------------
 
-See http://wiki.openstreetmap.org/wiki/JOSM/Plugins/OpenData/Toulouse 
-and http://wiki.openstreetmap.org/wiki/Toulouse/ToulouseMetropoleData
+See https://wiki.openstreetmap.org/wiki/JOSM/Plugins/OpenData/Toulouse 
+and https://wiki.openstreetmap.org/wiki/Toulouse/ToulouseMetropoleData
