--- a/applications/editors/josm/i18n/build.xml
+++ b/applications/editors/josm/i18n/build.xml
@@ -162,13 +162,14 @@
     <!-- If the file `josm.pot` is present and the plugin has a `data/` directory, update its *.po files based on the ones in the `po/` directory. -->
     <!-- If the plugin has a Transifex config file `.tx/config`, skip this target altogether -->
     <target name="plugintrans">
+        <basename file="${path}" property="dir"/>
         <if>
-            <available file="${plugin.dir}/${path}/.tx/config" type="file"/>
+            <available file="${plugin.dir}/${dir}/.tx/config" type="file"/>
             <then>
-                <echo message="Skip plugin ${path}, because it is translated with Transifex!"/>
+                <echo message="Skip plugin ${dir}, because it is translated with Transifex!"/>
             </then>
             <else>
-                <basename file="${path}" property="dir"/>
+                <echo message="Run plugintrans target for plugin ${dir}" level="info"/>
                 <mkdir dir="${po.build.dir}/plugin_${dir}"/>
                 <exec executable="perl" failonerror="true" output="${po.build.dir}/plugin_${dir}/trans_plugin.java">
                     <arg line="convplugins.pl ${plugin.dir}/${dir}/build.xml"/>
