see #josm16682 - first version of openjfx plugin

--- a/applications/editors/josm/plugins/openjfx/README
+++ b/applications/editors/josm/plugins/openjfx/README
@@ -1,4 +1,4 @@
 README 
 ======
-This plugin provides the openjfx library for JOSM plugins.
+This plugin provides the openjfx (JavaFX) library for JOSM plugins.
     * Licensed under GPL v3 (see LICENSE)
